Fix typo in title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<title>Project On</title>
+<title>Project One</title>
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro'
     rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css"
